# events

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
examples/: CMakeLists.txt
examples/observable/: CMakeLists.txt  main.cpp
include/: event-emitter.h  object.h  pubsub.h  utils.h
src/: event-emitter.cpp  object.cpp
tests/: main.cpp
